# gmc_code_gen

./: CMakeLists.txt  LICENSE  README.md
cblas_extended/: cblas_ddidimm.cpp  cblas_ddidisv.cpp  cblas_ddimm.cpp  cblas_ddisv.cpp  cblas_ddisymm.cpp  cblas_ddisysv.cpp  cblas_dditrmm.cpp  cblas_dditrsv.cpp  cblas_dgedisv.cpp  cblas_dgegesv.cpp  cblas_dgesysv.cpp  cblas_dgetrsv.cpp  cblas_dpodisv.cpp  cblas_dpogesv.cpp  cblas_dposysv.cpp  cblas_dpotrsv.cpp  cblas_dsydisv.cpp  cblas_dsygesv.cpp  cblas_dsysymm.cpp  cblas_dsysysv.cpp  cblas_dsytrsv.cpp  cblas_dtrdisv.cpp  cblas_dtrsymm.cpp  cblas_dtrsysv.cpp  cblas_dtrtrmm.cpp  cblas_dtrtrsv.cpp  cblas_extended.hpp
cblas_extended/base/: dbdigesv.cpp  ddidimm.cpp  ddidisv.cpp  ddimm.cpp  ddisv.cpp  ddisymm.cpp  ddisysv.cpp  dditrmm.cpp  dditrsv.cpp  dge_trans.cpp  dgedisv.cpp  dgegesv.cpp  dgesysv.cpp  dgetrsv.cpp  dlacpy.cpp  dlaswp2.cpp  dlaswp3.cpp  dlaswp4.cpp  dpodisv.cpp  dpogesv.cpp  dposysv.cpp  dpotrsv.cpp  dsydisv.cpp  dsygesv.cpp  dsysymm.cpp  dsysysv.cpp  dsytrsv.cpp  dtrdisv.cpp  dtrsymm.cpp  dtrsysv.cpp  dtrtrmm.cpp  dtrtrmm.test.cpp  dtrtrsv.cpp  extended_base.hpp  instrumentation.hpp  sy2full.cpp
code_generator/: CMakeLists.txt  main.cpp
experiments/: CMakeLists.txt  experiment1.cpp  experiment2.cpp  experiment_arma.cpp  experiment_arma.hpp.in  gen_armadillo_code.cpp  generate_chains_10comb.cpp  generate_models.cpp  timings_10comb.cpp
inputs/: basic_chain.txt  mc5_w_lower.txt  mc7_0.txt  mc7_1.txt  mc7_10.txt  mc7_11.txt  mc7_12.txt  mc7_2.txt  mc7_3.txt  mc7_4.txt  mc7_5.txt  mc7_6.txt  mc7_7.txt  mc7_8.txt  mc7_9.txt
jobs/: compile.sbatch  experiment1_n5.sbatch  experiment1_n6.sbatch  experiment1_n7.sbatch  experiment2.sbatch  generate_models.sbatch  generate_times.sbatch  process_exp1.sbatch  times_arma.sbatch
plotting/: figure_exp1.py  figure_exp2.py  processing_exp1.py
src/: CMakeLists.txt  algorithm.cpp  algorithm.hpp  analyzer.cpp  analyzer.hpp  definitions.hpp  experiment_util.cpp  experiment_util.hpp  expr_generator.cpp  expr_generator.hpp  features.cpp  features.hpp  generator.cpp  generator.hpp  instance_generator.cpp  instance_generator.hpp  kernel.cpp  kernel.hpp  macros.hpp  macros_cblas.hpp  macros_expr_gen.hpp  matcher.cpp  matcher.hpp  matrix.cpp  matrix.hpp  node.cpp  node.hpp  permutation.cpp  permutation.hpp  settings_kernels.hpp  variant.cpp  variant.hpp
src/frontend/: lexer.cpp  lexer.hpp  notes_lexer.txt  parser.cpp  parser.hpp  token_codes.hpp
src/kernels/: didimm.cpp  didimm.hpp  didisv.cpp  didisv.hpp  dimm.cpp  dimm.hpp  disv.cpp  disv.hpp  disymm.cpp  disymm.hpp  disysv.cpp  disysv.hpp  ditrmm.cpp  ditrmm.hpp  ditrsv.cpp  ditrsv.hpp  gedisv.cpp  gedisv.hpp  gegesv.cpp  gegesv.hpp  gemm.cpp  gemm.hpp  gesysv.cpp  gesysv.hpp  getrsv.cpp  getrsv.hpp  podisv.cpp  podisv.hpp  pogesv.cpp  pogesv.hpp  posysv.cpp  posysv.hpp  potrsv.cpp  potrsv.hpp  sydisv.cpp  sydisv.hpp  sygesv.cpp  sygesv.hpp  symm.cpp  symm.hpp  (+20 more)
src/models/: CMakeLists.txt  base1d.cpp  base1d.hpp  base2d.cpp  base2d.hpp  base3d.cpp  base3d.hpp  interpolation.cpp  interpolation.hpp  model1d.cpp  model1d.hpp  model2d.cpp  model2d.hpp  model3d.cpp  model3d.hpp  model_common.cpp  model_common.hpp  settings_models.hpp
src/utils/: common.cpp  common.hpp  dMatrix.cpp  dMatrix.hpp  matrix_generator.cpp  matrix_generator.hpp
test/: CMakeLists.txt  algorithm.test.cpp  execution_validation.test.cpp  model_loading.test.cpp
tmp/: expr_exp2.txt
